--- a/luka.ipynb
+++ b/luka.ipynb
@@ -30,14 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -228,13 +221,13 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "luka_data_nba = pd.read_csv('luka_data.csv')\n",
+    "luka_data_nba = pd.read_csv('data/luka_data.csv')\n",
     "luka_data_nba.head()"
    ]
   },
@@ -252,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -391,13 +384,13 @@
        "[3 rows x 26 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "luka_data_euro = pd.read_csv('euroleague_stats.csv')\n",
+    "luka_data_euro = pd.read_csv('data/euroleague_stats.csv')\n",
     "luka_data_euro.head()"
    ]
   },
@@ -410,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -601,13 +594,13 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "luka_data_liga = pd.read_csv('liga_acb_stats.csv')\n",
+    "luka_data_liga = pd.read_csv('data/liga_acb_stats.csv')\n",
     "luka_data_liga.head()"
    ]
   },
