--- a/luka.ipynb
+++ b/luka.ipynb
@@ -607,6 +607,457 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# 4. AD's NBA data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Lg</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>G</th>\n",
+       "      <th>GS</th>\n",
+       "      <th>MP</th>\n",
+       "      <th>PER</th>\n",
+       "      <th>TS%</th>\n",
+       "      <th>...</th>\n",
+       "      <th>USG%</th>\n",
+       "      <th>OWS</th>\n",
+       "      <th>DWS</th>\n",
+       "      <th>WS</th>\n",
+       "      <th>WS/48</th>\n",
+       "      <th>OBPM</th>\n",
+       "      <th>DBPM</th>\n",
+       "      <th>BPM</th>\n",
+       "      <th>VORP</th>\n",
+       "      <th>Awards</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2012-13</td>\n",
+       "      <td>19</td>\n",
+       "      <td>NOH</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>64</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1846</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>0.559</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.8</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>0.159</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>ROY-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-14</td>\n",
+       "      <td>20</td>\n",
+       "      <td>NOP</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>67</td>\n",
+       "      <td>66</td>\n",
+       "      <td>2358</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>0.582</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25.2</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>0.212</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>DPOY-8AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-15</td>\n",
+       "      <td>21</td>\n",
+       "      <td>NOP</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>68</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2455</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>0.591</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.274</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>MVP-5DPOY-4ASNBA1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-16</td>\n",
+       "      <td>22</td>\n",
+       "      <td>NOP</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>C</td>\n",
+       "      <td>61</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2164</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.559</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.6</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.160</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>DPOY-9AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-17</td>\n",
+       "      <td>23</td>\n",
+       "      <td>NOP</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>C</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2708</td>\n",
+       "      <td>27.5</td>\n",
+       "      <td>0.580</td>\n",
+       "      <td>...</td>\n",
+       "      <td>32.6</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.195</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>MVP-9ASNBA1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2017-18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>NOP</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>75</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2727</td>\n",
+       "      <td>28.9</td>\n",
+       "      <td>0.612</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>0.241</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>MVP-3DPOY-3ASNBA1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2018-19</td>\n",
+       "      <td>25</td>\n",
+       "      <td>NOP</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>C</td>\n",
+       "      <td>56</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1850</td>\n",
+       "      <td>30.3</td>\n",
+       "      <td>0.597</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>0.247</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2019-20</td>\n",
+       "      <td>26</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>62</td>\n",
+       "      <td>62</td>\n",
+       "      <td>2131</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>0.610</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>MVP-6DPOY-2ASNBA1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1162</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>0.556</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>0.152</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2021-22</td>\n",
+       "      <td>28</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>C</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1404</td>\n",
+       "      <td>23.9</td>\n",
+       "      <td>0.578</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>0.155</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2022-23</td>\n",
+       "      <td>29</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>C</td>\n",
+       "      <td>56</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1904</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.4</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.226</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2023-24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>C</td>\n",
+       "      <td>76</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>25.8</td>\n",
+       "      <td>0.621</td>\n",
+       "      <td>...</td>\n",
+       "      <td>26.7</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>0.210</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>DPOY-4ASNBA2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2024-25</td>\n",
+       "      <td>31</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>NBA</td>\n",
+       "      <td>C</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>27.4</td>\n",
+       "      <td>0.601</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.4</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>0.208</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13 Yrs</td>\n",
+       "      <td>13 Yrs</td>\n",
+       "      <td>13 Yrs</td>\n",
+       "      <td>13 Yrs</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>778</td>\n",
+       "      <td>771</td>\n",
+       "      <td>26849</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>0.593</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.3</td>\n",
+       "      <td>73.4</td>\n",
+       "      <td>44.9</td>\n",
+       "      <td>118.3</td>\n",
+       "      <td>0.212</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Season     Age    Team      Lg  Pos    G   GS     MP   PER    TS%  ...  \\\n",
+       "0   2012-13      19     NOH     NBA   PF   64   60   1846  21.7  0.559  ...   \n",
+       "1   2013-14      20     NOP     NBA   PF   67   66   2358  26.5  0.582  ...   \n",
+       "2   2014-15      21     NOP     NBA   PF   68   68   2455  30.8  0.591  ...   \n",
+       "3   2015-16      22     NOP     NBA    C   61   61   2164  25.0  0.559  ...   \n",
+       "4   2016-17      23     NOP     NBA    C   75   75   2708  27.5  0.580  ...   \n",
+       "5   2017-18      24     NOP     NBA   PF   75   75   2727  28.9  0.612  ...   \n",
+       "6   2018-19      25     NOP     NBA    C   56   56   1850  30.3  0.597  ...   \n",
+       "7   2019-20      26     LAL     NBA   PF   62   62   2131  27.4  0.610  ...   \n",
+       "8   2020-21      27     LAL     NBA   PF   36   36   1162  22.1  0.556  ...   \n",
+       "9   2021-22      28     LAL     NBA    C   40   40   1404  23.9  0.578  ...   \n",
+       "10  2022-23      29     LAL     NBA    C   56   54   1904  27.8  0.627  ...   \n",
+       "11  2023-24      30     LAL     NBA    C   76   76   2700  25.8  0.621  ...   \n",
+       "12  2024-25      31     LAL     NBA    C   42   42   1440  27.4  0.601  ...   \n",
+       "13   13 Yrs  13 Yrs  13 Yrs  13 Yrs  NaN  778  771  26849  26.9  0.593  ...   \n",
+       "\n",
+       "    USG%   OWS   DWS     WS  WS/48  OBPM  DBPM  BPM  VORP             Awards  \n",
+       "0   21.8   3.7   2.4    6.1  0.159   1.8   0.7  2.5   2.1              ROY-2  \n",
+       "1   25.2   7.2   3.2   10.4  0.212   4.0   0.8  4.8   4.0           DPOY-8AS  \n",
+       "2   27.8   9.9   4.2   14.0  0.274   6.6   2.3  8.9   6.7  MVP-5DPOY-4ASNBA1  \n",
+       "3   29.6   4.4   2.8    7.2  0.160   3.6   0.4  3.9   3.2           DPOY-9AS  \n",
+       "4   32.6   5.9   5.1   11.0  0.195   4.4   1.4  5.9   5.4        MVP-9ASNBA1  \n",
+       "5   30.0   8.8   4.9   13.7  0.241   5.3   1.4  6.7   5.9  MVP-3DPOY-3ASNBA1  \n",
+       "6   29.5   6.4   3.1    9.5  0.247   7.1   2.3  9.4   5.3                 AS  \n",
+       "7   29.3   6.7   4.4   11.1  0.250   5.4   2.6  8.0   5.4  MVP-6DPOY-2ASNBA1  \n",
+       "8   29.2   1.3   2.4    3.7  0.152   2.6   2.2  4.8   2.0                 AS  \n",
+       "9   27.1   2.6   2.0    4.5  0.155   2.6   1.2  3.8   2.0                NaN  \n",
+       "10  28.4   5.5   3.4    9.0  0.226   4.6   1.7  6.3   4.0                NaN  \n",
+       "11  26.7   7.2   4.7   11.8  0.210   3.5   1.7  5.1   4.9       DPOY-4ASNBA2  \n",
+       "12  30.4   3.8   2.4    6.2  0.208   4.5   1.2  5.8   2.8                NaN  \n",
+       "13  28.3  73.4  44.9  118.3  0.212   4.4   1.5  5.9  53.8                NaN  \n",
+       "\n",
+       "[14 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AD_data = pd.read_csv('data/AD.csv')\n",
+    "AD_data.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
