--- a/luka.ipynb
+++ b/luka.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,10 @@
     "import seaborn as sns\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import time"
+    "import time\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics.pairwise import euclidean_distances"
    ]
   },
   {
@@ -1303,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1471,18 +1474,143 @@
        "      <td>5.5</td>\n",
        "      <td>2006-2007</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Steve Nash</td>\n",
+       "      <td>32</td>\n",
+       "      <td>PHO</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>76</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2682</td>\n",
+       "      <td>23.8</td>\n",
+       "      <td>0.654</td>\n",
+       "      <td>0.353</td>\n",
+       "      <td>...</td>\n",
+       "      <td>22.9</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>0.225</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>-0.8</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2006-2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Tracy McGrady</td>\n",
+       "      <td>27</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>71</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2539</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>0.515</td>\n",
+       "      <td>0.257</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>0.163</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2006-2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Manu Ginóbili</td>\n",
+       "      <td>29</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>75</td>\n",
+       "      <td>36</td>\n",
+       "      <td>2060</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>0.609</td>\n",
+       "      <td>0.378</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>10.6</td>\n",
+       "      <td>0.246</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>2006-2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Gilbert Arenas</td>\n",
+       "      <td>25</td>\n",
+       "      <td>WAS</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>74</td>\n",
+       "      <td>73</td>\n",
+       "      <td>2942</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.565</td>\n",
+       "      <td>0.377</td>\n",
+       "      <td>...</td>\n",
+       "      <td>31.4</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>0.177</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>-0.8</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2006-2007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Jason Kidd</td>\n",
+       "      <td>33</td>\n",
+       "      <td>NJN</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>2933</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>0.516</td>\n",
+       "      <td>0.398</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>0.152</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>2006-2007</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
+       "<p>10 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Player  Age Team Pos   G  GS    MP   PER    TS%   3PAr  ...  USG%  \\\n",
-       "0   LeBron James   22  CLE  SF  78  78  3190  24.5  0.552  0.191  ...  31.0   \n",
-       "1  Dirk Nowitzki   28  DAL  PF  78  78  2820  27.6  0.605  0.129  ...  28.9   \n",
-       "2     Tim Duncan   30  SAS   C  80  80  2726  26.1  0.579  0.008  ...  27.9   \n",
-       "3    Kobe Bryant   28  LAL  SG  77  77  3140  26.1  0.580  0.227  ...  33.6   \n",
-       "4  Kevin Garnett   30  MIN  PF  76  76  2995  24.1  0.546  0.042  ...  27.4   \n",
+       "           Player  Age Team Pos   G  GS    MP   PER    TS%   3PAr  ...  USG%  \\\n",
+       "0    LeBron James   22  CLE  SF  78  78  3190  24.5  0.552  0.191  ...  31.0   \n",
+       "1   Dirk Nowitzki   28  DAL  PF  78  78  2820  27.6  0.605  0.129  ...  28.9   \n",
+       "2      Tim Duncan   30  SAS   C  80  80  2726  26.1  0.579  0.008  ...  27.9   \n",
+       "3     Kobe Bryant   28  LAL  SG  77  77  3140  26.1  0.580  0.227  ...  33.6   \n",
+       "4   Kevin Garnett   30  MIN  PF  76  76  2995  24.1  0.546  0.042  ...  27.4   \n",
+       "5      Steve Nash   32  PHO  PG  76  76  2682  23.8  0.654  0.353  ...  22.9   \n",
+       "6   Tracy McGrady   27  HOU  SG  71  71  2539  23.2  0.515  0.257  ...  35.0   \n",
+       "7   Manu Ginóbili   29  SAS  SG  75  36  2060  24.1  0.609  0.378  ...  27.1   \n",
+       "8  Gilbert Arenas   25  WAS  PG  74  73  2942  24.0  0.565  0.377  ...  31.4   \n",
+       "9      Jason Kidd   33  NJN  PG  80  80  2933  19.4  0.516  0.398  ...  19.4   \n",
        "\n",
        "    OWS  DWS    WS  WS/48  OBPM  DBPM  BPM  VORP     Season  \n",
        "0   8.0  5.7  13.7  0.206   5.9   2.2  8.1   8.1  2006-2007  \n",
@@ -1490,11 +1618,16 @@
        "2   6.3  6.8  13.0  0.230   3.8   3.2  7.0   6.2  2006-2007  \n",
        "3  10.8  2.2  13.0  0.199   6.4  -0.5  5.9   6.1  2006-2007  \n",
        "4   5.7  4.9  10.7  0.171   3.8   1.7  5.4   5.5  2006-2007  \n",
+       "5  10.8  1.7  12.6  0.225   6.7  -0.8  5.9   5.3  2006-2007  \n",
+       "6   4.1  4.5   8.6  0.163   4.9   1.2  6.1   5.2  2006-2007  \n",
+       "7   6.3  4.3  10.6  0.246   5.3   2.5  7.8   5.1  2006-2007  \n",
+       "8   9.3  1.5  10.8  0.177   5.5  -0.8  4.7   5.0  2006-2007  \n",
+       "9   5.1  4.1   9.3  0.152   3.1   1.5  4.7   4.9  2006-2007  \n",
        "\n",
-       "[5 rows x 28 columns]"
+       "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,14 +1642,253 @@
     "all_players = all_players.drop(columns=['Awards', 'Player-additional', 'Rk'])\n",
     "all_players.to_csv('data/all_players.csv', index=False)\n",
     "\n",
-    "all_players.head()"
+    "all_players.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Common numeric columns: ['3PAr', 'AST%', 'Age', 'BLK%', 'BPM', 'DBPM', 'DRB%', 'DWS', 'FTr', 'G', 'GS', 'MP', 'OBPM', 'ORB%', 'OWS', 'PER', 'STL%', 'TOV%', 'TRB%', 'TS%', 'USG%', 'VORP', 'WS', 'WS/48']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "# Get numeric columns from each DataFrame\n",
+    "numeric_columns_all = set(all_players_common.select_dtypes(include=[np.number]).columns)\n",
+    "numeric_columns_luka = set(luka_common.select_dtypes(include=[np.number]).columns)\n",
+    "\n",
+    "# Find the intersection (common columns) and sort them to get a fixed order\n",
+    "common_numeric_columns = sorted(list(numeric_columns_all.intersection(numeric_columns_luka)))\n",
+    "\n",
+    "print(\"Common numeric columns:\", common_numeric_columns)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adding AD & Luke data to the all_players DF"
+    "## 1. Getting shared numeric cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Common numeric columns: ['3PAr', 'AST%', 'BLK%', 'BPM', 'DBPM', 'DRB%', 'DWS', 'FTr', 'G', 'GS', 'MP', 'OBPM', 'ORB%', 'OWS', 'PER', 'STL%', 'TOV%', 'TRB%', 'TS%', 'USG%', 'VORP', 'WS', 'WS/48']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "numeric_cols_all = set(all_players.select_dtypes(include=[np.number]).columns)\n",
+    "numeric_cols_luke = set(luke_combined_data.select_dtypes(include=[np.number]).columns)\n",
+    "numeric_cols_ad = set(AD_combined_data.select_dtypes(include=[np.number]).columns)\n",
+    "\n",
+    "\n",
+    "common_numeric_cols = sorted(list(numeric_cols_all.intersection(numeric_cols_luke, numeric_cols_ad)))\n",
+    "print(\"Common numeric columns:\", common_numeric_cols)\n",
+    "\n",
+    "\n",
+    "\n",
+    "all_players_common = all_players.loc[:, ~all_players.columns.duplicated()]\n",
+    "luke_common = luke_combined_data.loc[:, ~luke_combined_data.columns.duplicated()]\n",
+    "ad_common = AD_combined_data.loc[:, ~AD_combined_data.columns.duplicated()]\n",
+    "\n",
+    "all_players_numeric = all_players_common[common_numeric_cols]\n",
+    "luke_numeric = luke_common[common_numeric_cols]\n",
+    "ad_numeric = ad_common[common_numeric_cols]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Getting AD and Luka's CURRENT season"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "luka_current = luke_numeric.iloc[-1:] \n",
+    "ad_current = ad_numeric.iloc[-1:]    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Combine and set a common scalar "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_data = np.vstack([luka_current.values, ad_current.values, all_players_numeric.values])\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "combined_scaled = scaler.fit_transform(combined_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Run k-means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_clusters = 10  # You can adjust this parameter\n",
+    "kmeans = KMeans(n_clusters=n_clusters, random_state=42)\n",
+    "labels = kmeans.fit_predict(combined_scaled)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Get labels for AD and luka"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Luka's cluster label: 1\n",
+      "AD's cluster label: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "luka_label = labels[0]\n",
+    "ad_label = labels[1]\n",
+    "\n",
+    "print(\"Luka's cluster label:\", luka_label)\n",
+    "print(\"AD's cluster label:\", ad_label)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Clustering for Luka!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 Most Similar Seasons to Luka's Current Season:\n",
+      "      Player    Season\n",
+      "LeBron James 2018-2019\n",
+      "LeBron James 2021-2022\n",
+      "Nikola Jokić 2019-2020\n",
+      "LeBron James 2016-2017\n",
+      "Kevin Durant 2021-2022\n",
+      " Luka Dončić 2020-2021\n",
+      "LeBron James 2019-2020\n",
+      "LeBron James 2020-2021\n",
+      "Nikola Jokić 2017-2018\n",
+      "Kevin Durant 2011-2012\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_players_scaled_portion = combined_scaled[2:]\n",
+    "luka_center = kmeans.cluster_centers_[luka_label].reshape(1, -1)\n",
+    "luka_distances = euclidean_distances(all_players_scaled_portion, luka_center).flatten()\n",
+    "luka_cluster_mask = (labels[2:] == luka_label)\n",
+    "luka_cluster_indices = np.where(luka_cluster_mask)[0]\n",
+    "luka_cluster_distances = luka_distances[luka_cluster_mask]\n",
+    "top10_luka_indices_rel = luka_cluster_indices[np.argsort(luka_cluster_distances)[:10]]\n",
+    "luka_similar_seasons = all_players.iloc[top10_luka_indices_rel]\n",
+    "\n",
+    "print(\"10 Most Similar Seasons to Luka's Current Season:\")\n",
+    "print(luka_similar_seasons[['Player', 'Season']].to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. K-nearest for AD!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 10 Similar Seasons to AD's Current Season (Nearest Neighbors):\n",
+      "       Player    Season\n",
+      " LeBron James 2008-2009\n",
+      " Kevin Durant 2012-2013\n",
+      " Kevin Durant 2013-2014\n",
+      " LeBron James 2012-2013\n",
+      " LeBron James 2009-2010\n",
+      " Kevin Durant 2009-2010\n",
+      "   Chris Paul 2008-2009\n",
+      "Dirk Nowitzki 2006-2007\n",
+      " LeBron James 2010-2011\n",
+      " LeBron James 2007-2008\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danchizik/Desktop/luke-sagb/myenv/lib/python3.11/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but StandardScaler was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "ad_scaled = scaler.transform(ad_current)  # Transform AD's current season separately\n",
+    "ad_distances_full = euclidean_distances(all_players_scaled_portion, ad_scaled).flatten()\n",
+    "top10_ad_full_indices = np.argsort(ad_distances_full)[:10]\n",
+    "ad_similar_seasons_full = all_players.iloc[top10_ad_full_indices]\n",
+    "print(\"\\nTop 10 Similar Seasons to AD's Current Season (Nearest Neighbors):\")\n",
+    "print(ad_similar_seasons_full[['Player', 'Season']].to_string(index=False))\n"
    ]
   },
   {
