--- a/luka_AD.ipynb
+++ b/luka_AD.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# This notebook runs a KMeans algorithm to find which historical NBA player seasons are most similar to AD's and Luka's last year seasons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Installations and Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +234,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +437,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +640,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +850,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1053,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1256,7 @@
        "[5 rows x 58 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1620,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1679,11 +1686,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "luka_current = luke_numeric.iloc[-1:] \n",
+    "luka_current = luke_numeric.iloc[-2:] \n",
     "ad_current = ad_numeric.iloc[-1:] \n",
     "\n",
     "combined_data = np.vstack([luka_current.values, ad_current.values, all_players_numeric.values]) ## https://www.geeksforgeeks.org/numpy-vstack-in-python/\n",
@@ -1701,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,15 +1719,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Luka's label: 1\n",
-      "AD's label: 2\n"
+      "Luka's label: 4\n",
+      "AD's label: 7\n"
      ]
     }
    ],
@@ -1741,52 +1748,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 Most Similar Seasons to Luka's Current Season:\n",
-      "            Player    Season\n",
-      "      LeBron James 2018-2019\n",
-      "      LeBron James 2021-2022\n",
-      "      Nikola Jokić 2019-2020\n",
-      "      LeBron James 2016-2017\n",
-      "      Kevin Durant 2021-2022\n",
-      "       Luka Dončić 2020-2021\n",
-      "      LeBron James 2019-2020\n",
-      "      LeBron James 2020-2021\n",
-      "      Nikola Jokić 2017-2018\n",
-      "      Kevin Durant 2011-2012\n",
-      "       Luka Dončić 2019-2020\n",
-      "      James Harden 2020-2021\n",
-      "Karl-Anthony Towns 2021-2022\n",
-      "       Luka Dončić 2021-2022\n",
-      "Karl-Anthony Towns 2019-2020\n",
-      "      Kevin Durant 2017-2018\n",
-      "  DeMarcus Cousins 2016-2017\n",
-      "      Nikola Jokić 2018-2019\n",
-      "Karl-Anthony Towns 2018-2019\n",
-      "      Nikola Jokić 2016-2017\n",
-      "        Kevin Love 2013-2014\n",
-      "       Joel Embiid 2018-2019\n"
+      "Most Similar Seasons to Luka's Current Season\n",
+      "               Player    Season\n",
+      "           Chris Paul 2011-2012\n",
+      "    Russell Westbrook 2015-2016\n",
+      "           Kevin Love 2013-2014\n",
+      "         Derrick Rose 2010-2011\n",
+      "          Rajon Rondo 2009-2010\n",
+      "        Hedo Türkoğlu 2007-2008\n",
+      "         James Harden 2017-2018\n",
+      "        Stephen Curry 2014-2015\n",
+      "           Chris Paul 2012-2013\n",
+      "Giannis Antetokounmpo 2019-2020\n",
+      "       Damian Lillard 2017-2018\n",
+      "Giannis Antetokounmpo 2018-2019\n",
+      "          Brandon Roy 2008-2009\n",
+      "           Chris Paul 2008-2009\n"
      ]
     }
    ],
    "source": [
     "all_players_scaled = combined_scaled[2:]\n",
-    "luka_center = kmeans.cluster_centers_[luka_label].reshape(1, -1) ## center of Luka's cluster\n",
-    "luka_distances = euclidean_distances(all_players_scaled, luka_center).flatten() ##distance from Luka to every other player\n",
+    "luka_center = kmeans.cluster_centers_[luka_label].reshape(1, -1)  \n",
+    "luka_distances = euclidean_distances(all_players_scaled, luka_center).flatten()  \n",
     "luka_cluster_mask = (labels[2:] == luka_label)\n",
     "luka_cluster_indices = np.where(luka_cluster_mask)[0]\n",
     "luka_cluster_distances = luka_distances[luka_cluster_mask]\n",
-    "top10_luka_indices_rel = luka_cluster_indices[np.argsort(luka_cluster_distances)[:25]]\n",
+    "top10_luka_indices_rel = luka_cluster_indices[np.argsort(luka_cluster_distances)[:18]]\n",
     "luka_similar_seasons = all_players.iloc[top10_luka_indices_rel]\n",
     "\n",
-    "print(\"20 Most Similar Seasons to Luka's Current Season:\")\n",
-    "print(luka_similar_seasons[['Player', 'Season']].to_string(index=False))"
+    "# Exclude LeBron and KD\n",
+    "luka_similar_seasons = luka_similar_seasons[\n",
+    "    ~luka_similar_seasons['Player'].isin(['LeBron James', 'Kevin Durant', 'Luka Dončić'])\n",
+    "]\n",
+    "\n",
+    "print(\"Most Similar Seasons to Luka's Current Season\")\n",
+    "print(luka_similar_seasons[['Player', 'Season']].to_string(index=False))\n"
    ]
   },
   {
@@ -1798,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1806,33 +1810,22 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Top 20 Similar Seasons to AD's Current Season (Nearest Neighbors):\n",
-      "       Player    Season\n",
-      " LeBron James 2008-2009\n",
-      " Kevin Durant 2012-2013\n",
-      " Kevin Durant 2013-2014\n",
-      " LeBron James 2012-2013\n",
-      " LeBron James 2009-2010\n",
-      " Kevin Durant 2009-2010\n",
-      "   Chris Paul 2008-2009\n",
-      "Dirk Nowitzki 2006-2007\n",
-      " LeBron James 2010-2011\n",
-      " LeBron James 2007-2008\n",
-      "   Chris Paul 2007-2008\n",
-      " James Harden 2014-2015\n",
-      "  Dwyane Wade 2008-2009\n",
-      " LeBron James 2006-2007\n",
-      "Stephen Curry 2015-2016\n",
-      "    Pau Gasol 2010-2011\n",
-      " LeBron James 2013-2014\n",
-      "   Tim Duncan 2006-2007\n",
-      " LeBron James 2017-2018\n",
-      "Dwight Howard 2010-2011\n",
-      "  Kobe Bryant 2007-2008\n",
-      "   Kevin Love 2013-2014\n",
-      "Anthony Davis 2017-2018\n",
-      "   Chris Paul 2014-2015\n",
-      " James Harden 2018-2019\n"
+      "Most Similar Seasons to AD's Current Season (Nearest Neighbors):\n",
+      "        Player    Season\n",
+      "    Chris Paul 2008-2009\n",
+      "    Chris Paul 2012-2013\n",
+      "   Rajon Rondo 2009-2010\n",
+      "Andre Iguodala 2009-2010\n",
+      "   Dwyane Wade 2008-2009\n",
+      "    Tim Duncan 2006-2007\n",
+      "  Derrick Rose 2010-2011\n",
+      " Hedo Türkoğlu 2007-2008\n",
+      "      Rudy Gay 2007-2008\n",
+      " Stephen Curry 2014-2015\n",
+      "   Brandon Roy 2008-2009\n",
+      " Dirk Nowitzki 2006-2007\n",
+      "   Kobe Bryant 2010-2011\n",
+      "    Kevin Love 2013-2014\n"
      ]
     },
     {
@@ -1847,9 +1840,12 @@
    "source": [
     "ad_scaled = scaler.transform(ad_current) \n",
     "ad_distances = euclidean_distances(all_players_scaled, ad_scaled).flatten()\n",
-    "top10_ad_full_indices = np.argsort(ad_distances)[:25]\n",
+    "top10_ad_full_indices = np.argsort(ad_distances)[:18]\n",
     "ad_similar_seasons_full = all_players.iloc[top10_ad_full_indices]\n",
-    "print(\"\\nTop 20 Similar Seasons to AD's Current Season (Nearest Neighbors):\")\n",
+    "ad_similar_seasons_full = ad_similar_seasons_full[\n",
+    "    ~ad_similar_seasons_full['Player'].isin(['LeBron James', 'Kevin Durant'])\n",
+    "]\n",
+    "print(\"\\nMost Similar Seasons to AD's Current Season (Nearest Neighbors):\")\n",
     "print(ad_similar_seasons_full[['Player', 'Season']].to_string(index=False))"
    ]
   },
