--- a/season_change.ipynb
+++ b/season_change.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This notebook takes the most similar players to both Luka and AD (from the KNN algorithm in luka_AD.ipynb) and sees which of those similar players continued being a top 20 player in the league the following season"
+    "# Here I use the results from the Kmeans algorithm to see which of those similar players continued being a top 20 player in the league the following season"
    ]
   },
   {
